--- a/app/globals.css
+++ b/app/globals.css
@@ -1,12 +1,15 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --dark: #00061D;
+  /* Added missing '#' */
+  --light: #ffffff;
+  /* Added missing ';' */
+
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --dark: #00061D;
+    --foreground: #ffffff;
   }
 }
 
@@ -14,14 +17,21 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: var(--font-exo2);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  color: var(--light);
+  background: var(--dark);
+}
+
+button {
+  font-family: inherit;
+  font-size: inherit;
+  border: none;
+  cursor: pointer;
 }
 
 * {
@@ -33,6 +43,47 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+button {
+  padding: 1em;
+  border-radius: 8px;
+  background-color: #c6c6cd;
+  background: linear-gradient(145deg, #f0f0f0, #cfdaf9);
+  color: #101116;
+  box-shadow: 2px 2px 10px #000000,
+    -3px -3px 10px #668ce5;
+  transition: box-shadow 0.3s ease;
+  position: relative
+}
+
+button:hover {
+  background-color: #303648;
+  background: linear-gradient(145deg, #f0f0f0, #cfdaf9);
+  box-shadow: 2px 2px 10px #000000,
+    -3px -3px 12px #b0c7fd;
+
+}
+
+button:active {
+  box-shadow: inset 0px 0px 5px #000000;
+  background: linear-gradient(145deg, #cfdaf9, #f0f0f0);
+}
+
+.buttonActive {
+  box-shadow: inset 0px 0px 5px #000000;
+  background: linear-gradient(145deg, #cfdaf9, #f0f0f0);
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100dvw;
+  height: 100dvh;
+  gap: 2em;
+  padding: 2em 0 0 0;
 }
 
 @media (prefers-color-scheme: dark) {
