--- a/app/globals.css
+++ b/app/globals.css
@@ -48,31 +48,27 @@ a {
 button {
   padding: 1em;
   border-radius: 8px;
-  background-color: #c6c6cd;
-  background: linear-gradient(145deg, #f0f0f0, #cfdaf9);
+  /* Use the same color as li background */
+  background-color: #f5e1e1;
+  background: linear-gradient(145deg, #fbe9e7, #f5e1e1);
   color: #101116;
   box-shadow: 2px 2px 10px #000000,
     -3px -3px 10px #668ce5;
   transition: box-shadow 0.3s ease;
-  position: relative
+  position: relative;
 }
 
 button:hover {
-  background-color: #303648;
-  background: linear-gradient(145deg, #f0f0f0, #cfdaf9);
+  background-color: #fbe9e7;
+  background: linear-gradient(145deg, #f5e1e1, #fbe9e7);
   box-shadow: 2px 2px 10px #000000,
     -3px -3px 12px #b0c7fd;
-
 }
 
-button:active {
-  box-shadow: inset 0px 0px 5px #000000;
-  background: linear-gradient(145deg, #cfdaf9, #f0f0f0);
-}
-
+button:active,
 .buttonActive {
   box-shadow: inset 0px 0px 5px #000000;
-  background: linear-gradient(145deg, #cfdaf9, #f0f0f0);
+  background: linear-gradient(145deg, #fbe9e7, #f5e1e1);
 }
 
 main {
