added selecting tracks and changing the context of the track to allow seamless interactions

--- a/app/components/SearchBar/searchBar.module.css
+++ b/app/components/SearchBar/searchBar.module.css
@@ -44,7 +44,7 @@
             transition: all 0.3s ease;
             overflow: hidden;
             box-shadow: 0 2px 8px 0 rgba(245, 81, 81, 0.08), 0 1.5px 4px 0 rgba(245, 81, 81, 0.08);
-
+            cursor:pointer;
         }
 
         & li:hover {
