--- a/app/globals.css
+++ b/app/globals.css
@@ -52,8 +52,8 @@ button {
   background-color: #f5e1e1;
   background: linear-gradient(145deg, #fbe9e7, #f5e1e1);
   color: #101116;
-  box-shadow: 2px 2px 10px #000000,
-    -3px -3px 10px #668ce5;
+  /* box-shadow: 2px 2px 10px #000000,
+    -3px -3px 10px #668ce5; */
   transition: box-shadow 0.3s ease;
   position: relative;
 }
