--- a/app/webplayback/webplayback.module.css
+++ b/app/webplayback/webplayback.module.css
@@ -12,8 +12,8 @@
     /* center content vertically */
     position: relative;
     border-radius: 20px;
-    box-shadow: 10px 10px 18px #000000,
-        -10px -10px 18px #21386d;
+    /* box-shadow: 10px 10px 18px #000000,
+        -10px -10px 18px #21386d; */
 }
 
 .albumArtContainer img {
