--- a/app/components/SearchBar/searchBar.module.css
+++ b/app/components/SearchBar/searchBar.module.css
@@ -1,8 +1,25 @@
+.paginationWrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
+    width: 100%;
+    padding: 1em 0;
+}
+
 .searchBar {
     display: flex;
     flex-direction: row;
     gap: .5em;
     width: 50%;
+
+    & input {
+        flex: 1;
+        padding: 0.5em;
+        border-radius: 4px;
+        border: 1px solid #f5e1e1;
+    }
 }
 
 .searchButton {
@@ -20,6 +37,7 @@
     justify-content: center;
     gap: 1em;
     width: 80dvw;
+    padding:0 0 3em 0;
 }
 
 .searchInput {
@@ -33,8 +51,10 @@
     display: flex;
     flex-direction: column;
     gap: 1em;
-    width: 80%;
+    width: 80dvw;
     max-height: 50vh;
+    position: relative;
+    margin:5em 0 0 0 ;
     /* overflow-y: auto; */
 
     & ul {
@@ -50,7 +70,7 @@
             display: flex;
             justify-content: flex-start;
             align-items: center;
-            width: 45%;
+            width: 100%;
             height: 3em;
             padding: 0 1em 0 0;
             border-radius: 8px;
@@ -105,6 +125,19 @@
     position: absolute;
     top: 0;
     left: 0;
+}
+
+.songResultsContents {
+    width:45%;
+}
+
+.songResultsTitle {
+    position: absolute;
+    top: -1em;
+    left: -.5em;
+    opacity: 50%;
+    font-size: 5em;
+    z-index: -1;
 }
 
 .artistName {
