--- a/app/webplayback/webplayback.module.css
+++ b/app/webplayback/webplayback.module.css
@@ -55,10 +55,37 @@
     gap: 2em;
 }
 
+.nextTrackInfo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 20%;
+    justify-content: flex-end;
+    flex-wrap: nowrap;
+    border-radius: 0 10px 10px 0;
+    height: 54px;
+    gap: 1em;
+    background: linear-gradient(to left, rgba(2, 14, 42, 0.92) 70%, rgba(2, 14, 42, 0));
+    font-size: .8em;
+    overflow: hidden;
+
+}
+
+/* .nextTrackDetails {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    justify-content: flex-end;
+    flex-wrap: nowrap;
+    gap: 1em;
+} */
+
+
 .playButtonsContainer {
-    background: rgba(2, 14, 42, 0.92);
+    /* background: rgba(2, 14, 42, 0.92); */
     /* Material Design blue-grey 900, slightly transparent */
-    padding: 0.5em 1.5em;
+    padding: 0 1.5em;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -69,6 +96,7 @@
     justify-content: center;
     align-items: center;
     width: 100dvw;
+    height: 54px;
 
     /* & button {
         padding: 1em;
@@ -102,6 +130,32 @@
 
 .playButtonsContainer svg:hover {
     transform: scale(1.27);
+}
+
+.previousTrackInfo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 20%;
+    justify-content: flex-start;
+    height: 54px;
+    gap: 1em;
+    background: linear-gradient(to right, rgba(2, 14, 42, 0.92) 70%, rgba(2, 14, 42, 0));
+    font-size: .8em;
+    border-radius: 10px 0 0 10px;
+    overflow:hidden;
+}
+
+.trackImageContainer {
+    height: 54px;
+
+    & img {
+        /* width: 100%; */
+        height: 100%;
+        /* border-radius: 50%; */
+        object-fit: cover;
+        object-position: center;
+    }
 }
 
 .trackInfoContainer {
