--- a/app/components/SongSearchResults/songSearchResults.module.css
+++ b/app/components/SongSearchResults/songSearchResults.module.css
@@ -8,46 +8,6 @@
     padding: 1em 0;
 }
 
-.searchBar {
-    display: flex;
-    flex-direction: row;
-    gap: .5em;
-    width: 50%;
-
-    & input {
-        flex: 1;
-        padding: 0.5em;
-        border-radius: 4px;
-        border: 1px solid #f5e1e1;
-    }
-}
-
-.searchButton {
-    padding: .5em;
-    flex: 0 0 auto;
-    width: auto;
-    min-width: unset;
-    align-self: flex-end;
-}
-
-.searchContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 1em;
-    width: 80dvw;
-    padding:0 0 3em 0;
-}
-
-.searchInput {
-    flex: 1 1 auto;
-    width: 100%;
-    min-width: 0;
-    box-sizing: border-box;
-}
-
-
 .searchResults {
     display: flex;
     flex-direction: column;
@@ -56,7 +16,7 @@
     max-height: 50vh;
     position: relative;
     margin:5em 0 0 0 ;
-
+    /* overflow-y: auto; */
 
     & ul {
         width: 100%;
