added play ability for myplaylists. removed color visualizer into separate component. need to work on optimizing but re-renders have dropped a lot

--- a/app/components/PlaylistSearchResults/playlistSearchResults.module.css
+++ b/app/components/PlaylistSearchResults/playlistSearchResults.module.css
@@ -111,6 +111,15 @@
     min-width: 0;
 }
 
+.trackName {
+    text-overflow: ellipsis;
+    width: 70%;
+    text-wrap: nowrap;
+    white-space: nowrap;
+    display: inline-block;
+    overflow: hidden;
+}
+
 @media (width <=600px) {
     .searchResults ul li {
         width: 100%;
