--- a/app/components/Playlists/playlists.module.css
+++ b/app/components/Playlists/playlists.module.css
@@ -62,6 +62,10 @@
         box-shadow: 0 2px 8px 0 rgba(245, 81, 81, 0.08), 0 1.5px 4px 0 rgba(245, 81, 81, 0.08);
         cursor: pointer;
     }
+
+    & li:hover {
+        transform: scale(1.08);
+    }
 }
 
 .playlistImageContainer {
@@ -70,6 +74,7 @@
     position: relative;
     overflow: hidden;
     height: 3em;
+    flex-shrink: 0;
 
     & img {
         width: 100%;
