changed some css to oklch. added faded borders at edge of scrolling playlists and padding around container to handle hover scale

--- a/app/components/Playlists/playlists.module.css
+++ b/app/components/Playlists/playlists.module.css
@@ -1,4 +1,35 @@
+.arrowSvg {
+    stroke: '#f5e1e1';
+     fill: '#f5e1e1';
+    width: 1.5em;
+    height: 1.5em;
+    display: block;
+    transition: transform 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+}
 
+.arrowSvg:hover {
+    transform: scale(1.27);
+    color: #a12d2d;
+}
+
+.fade {
+  position: absolute;
+  top: 0;
+  width: 75px; /* adjust as needed */
+  height: 100%;
+  pointer-events: none; /* allows clicks to pass through */
+  z-index: 1;
+}
+
+.fadeLeft {
+  left: 0;
+  background: linear-gradient(to right, var(--dark) 20%, transparent 80%);
+}
+
+.fadeRight {
+  right: 0;
+  background: linear-gradient(to left, var(--dark) 20%, transparent 80%);
+}
 
 /* Hide scrollbar for all browsers */
 .playlistsList {
@@ -38,7 +69,8 @@
     justify-content: space-between;
     align-items: center;
     gap: 1em;
-    width:75%;
+    width:100%;
+    padding:.5em;
     
 
 
@@ -53,15 +85,21 @@
         padding: 0 1em 0 0;
         border-radius: 8px;
         /* Material Design complementary background */
-        background-color: #f5e1e1;
+        background-color: var(--light);
         /* Complementary to #cfdaf9 (main bg) */
-        background: linear-gradient(145deg, #fbe9e7, #f5e1e1);
-        color: #101116;
+        background: linear-gradient(145deg, oklch(0.9478 0.0199 25.17), var(--light));
+        color: var(--dark);
         transition: all 0.3s ease;
         overflow: hidden;
         box-shadow: 0 2px 8px 0 rgba(245, 81, 81, 0.08), 0 1.5px 4px 0 rgba(245, 81, 81, 0.08);
         cursor: pointer;
     }
+
+    & li.spacerItem {
+    width:50px;
+    background:transparent;
+    box-shadow: none;
+}
 
     & li:hover {
         transform: scale(1.08);
@@ -102,16 +140,8 @@
     z-index: -1;
 }
 
-.arrowSvg {
-    stroke: '#f5e1e1';
-     fill: '#f5e1e1';
-    width: 1.5em;
-    height: 1.5em;
-    display: block;
-    transition: transform 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+.scrollContainer {
+    width:75%;
+    position:relative
 }
 
-.arrowSvg:hover {
-    transform: scale(1.27);
-    color: #a12d2d;
-}
